tests/int/use_command/snapshots/integration__int__use_command__binaries__should_not_leak_top_level_uses_into_inline_module_of_custom_path_bin_target.snap
---
source: tests/int/use_command/binaries.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - use
    - "app::app_only"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
